# whichllm

./: CHANGELOG.md  README.md  demo-run.tape  demo.tape  pyproject.toml  record-demo.sh
.github/workflows/: test.yml
Formula/: whichllm.rb
docs/: README.ja.md  README.zh-CN.md  cli.md  hardware.md  troubleshooting.md
local_llm_checker/: cli.py  constants.py
local_llm_checker/engine/: compatibility.py  ranker.py
local_llm_checker/hardware/: cpu.py  gpu_simulator.py
local_llm_checker/models/: grouper.py
local_llm_checker/output/: display.py
src/local_llm_checker/: __init__.py  cli.py  constants.py
src/local_llm_checker/engine/: compatibility.py  performance.py  ranker.py  types.py  vram.py
src/local_llm_checker/hardware/: types.py
src/local_llm_checker/models/: cache.py  fetcher.py  grouper.py  types.py
src/local_llm_checker/output/: display.py
src/whichllm/: cli.py  constants.py
src/whichllm/data/: gpu.py  lineage.py
src/whichllm/engine/: compatibility.py  performance.py  ranker.py
src/whichllm/hardware/: amd.py  cpu.py  gpu_db.py  gpu_simulator.py  nvidia.py
src/whichllm/models/: benchmark.py  cache.py  fetcher.py
src/whichllm/models/benchmark_sources/: aa_index.py  constants.py
src/whichllm/output/: display.py  ranking.py  upgrade.py
tests/: test_aa_index.py  test_amd_detection.py  test_cache_encoding.py  test_cli.py  test_compatibility.py  test_fetcher.py  test_grouper.py  test_gtx1650_variants.py  test_intel_gpu.py  test_multi_gpu.py  test_ranker.py  test_vram.py
