[project]
name = "whichllm"
version = "0.1.1"
description = "Find the best LLM that runs on your hardware"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.27",
    "psutil>=5.9",
    "dbgpu[fuzz]>=1.0",
    "nvidia-ml-py>=12.0",
]

[project.scripts]
whichllm = "whichllm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whichllm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
 "pyarrow>=23.0.1",
]
